<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CalculatorActivity!</string>
    <string name="app_name">Calculator</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
     <string name="btn9">9</string>
      <string name="btn0">0</string>
      <string name="btn00">00</string>
      <string name="btn.">.</string>
      
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMul">*</string>
    <string name="btnDiv">/</string>
    <string name="btnEql">=</string>
    <string name="btnPer">%</string>
    
    <string name="btnMC">MC</string>
    <string name="btnMR">MR</string>
    <string name="btnMAdd">M+</string>
    <string name="btnMSub">M-</string>
    <string name="btnMS">MS</string>
    <string name="btnHR">HR</string>
    <string name="btnC">C</string>
    <string name="btnAC">AC</string>
    
    

</resources>