<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ButtonMC"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMC" />

            <Button
                android:id="@+id/ButtonMR"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMR" />

            <Button
                android:id="@+id/ButtonAdd"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMAdd" />

            <Button
                android:id="@+id/ButtonMSub"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMSub" />

            <Button
                android:id="@+id/ButtonMS"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMS" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button07"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
               android:text="@string/btn7" />

            <Button
                android:id="@+id/button08"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/button09"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/ButtonDiv"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:text="@string/btnDiv" />

            <Button
                android:id="@+id/ButtonHR"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:text="@string/btnHR" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button04"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/button05"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/button06"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/ButtonMul"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/btnMul" />

        <Button
            android:id="@+id/ButtonAC"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAC" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:onClick="oneClicked"
             />

        <Button
            android:id="@+id/Button02"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/ButtonSub"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSub" />

        <Button
            android:id="@+id/ButtonC"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/btnC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Button12"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/btn00" />

            <Button
                android:id="@+id/Button08"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/Button11"
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:text="@string/btn." />

            <Button
                android:id="@+id/Button14"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btnEql" />

            <Button
                android:id="@+id/ButtonPer"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/btnPer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

</LinearLayout>